--- a/packages/dog_repository/pubspec.yaml
+++ b/packages/dog_repository/pubspec.yaml
@@ -1,6 +1,7 @@
 name: dog_repository
 description: A sample command-line application.
 version: 1.0.0
+publish_to: none
 # repository: https://github.com/my_org/my_repo
 
 environment:
