--- a/packages/app_ui/pubspec.yaml
+++ b/packages/app_ui/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_card_swiper: ^7.0.1
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   lottie: ^3.1.2
