--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   app_ui:
     path: packages/app_ui
+  auth_repository:
+    path: packages/auth_repository
   core:
     path: packages/core
   flutter:
@@ -17,6 +19,10 @@ dependencies:
   cupertino_icons: ^1.0.6
   riverpod: ^2.5.1
   flutter_riverpod: ^2.5.1
+  go_router: ^14.2.0
+  flutter_bloc: ^8.1.6
+  firebase_core: ^3.1.0
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
