--- a/packages/app_ui/pubspec.yaml
+++ b/packages/app_ui/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   flutter_card_swiper: ^7.0.1
   flutter_svg: ^2.0.10+1
+  form_builder_image_picker: ^4.0.0
   google_fonts: ^6.2.1
   lottie: ^3.1.2
   vector_graphics: ^1.1.11+1
