--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_core: ^3.1.0
   equatable: ^2.0.5
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
