--- a/packages/auth_service/pubspec.yaml
+++ b/packages/auth_service/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   firebase_auth: 5.1.0
   firebase_core: ^3.1.0
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   mocktail: ^1.0.3
