--- a/packages/core/pubspec.yaml
+++ b/packages/core/pubspec.yaml
@@ -1,15 +1,13 @@
 name: core
-description: A sample command-line application.
+description: Where Tindog models live
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
+publish_to: none
 
 environment:
   sdk: ^3.4.0
 
-# Add regular dependencies here.
 dependencies:
   equatable: ^2.0.5
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^3.0.0
