--- a/packages/app_ui/pubspec.yaml
+++ b/packages/app_ui/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.0 <4.0.0'
 
 dependencies:
+  chips_choice: ^3.0.1
   flutter:
     sdk: flutter
   flutter_card_swiper: ^7.0.1
